--- a/Version2.0/package.json
+++ b/Version2.0/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@riophae/vue-treeselect": "0.0.38",
     "axios": "^0.19.0",
     "element-ui": "2.9.1",
     "js-cookie": "^2.2.0",
