--- a/Version2.0/package.json
+++ b/Version2.0/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "element-ui": "^2.9.1",
     "js-cookie": "^2.2.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1",
