--- a/Version2.0/package.json
+++ b/Version2.0/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^2.2.0",
     "nprogress": "^0.2.0",
     "vue": "^2.5.2",
+    "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
