--- a/Version2.0/package.json
+++ b/Version2.0/package.json
@@ -17,13 +17,15 @@
     "@riophae/vue-treeselect": "0.0.38",
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
+    "file-saver": "^2.0.2",
     "js-cookie": "^2.2.0",
     "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "xlsx": "^0.15.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -72,6 +74,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
