--- a/Version2.0/package.json
+++ b/Version2.0/package.json
@@ -14,12 +14,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "@riophae/vue-treeselect": "0.0.38",
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "file-saver": "^2.0.2",
+    "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
     "nprogress": "^0.2.0",
+    "signalr": "^2.4.1",
     "vue": "^2.5.2",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.11.2",
