--- a/Version2.0/package.json
+++ b/Version2.0/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "signalr": "^2.4.1",
     "vue": "^2.5.2",
+    "vue-baidu-map": "^0.21.22",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1",
